--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,3 +66,391 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* shared component css below */
+/* shared component css below */
+/* shared component css below */
+/* shared component css below */
+/* shared component css below */
+/* shared component css below */
+
+
+html, body {
+  height: 100%;
+}
+.navbarsection {
+width: 100%;
+height: 60px;
+display: flex;
+flex-direction: row;
+background-color: rgb(233 253 241);
+border-bottom-width: 2px;
+}
+.logobox {
+width: 6%;
+display: flex;
+justify-content: end;
+align-items: center;
+
+}
+.logo {
+
+height: 100%;
+}
+.logo img{
+  width: 100%;
+  height: 100%;
+}
+.titlebox {
+
+  width: 70%;
+  display: flex;
+  align-items: center;
+}
+.title {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+}
+.title span {
+  color: #22c55e;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+}
+.profilebox {
+
+width: 25%;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.profileicons {
+width: 100%;
+height: 80%;
+display: flex;
+justify-content: end;
+}
+.icons {
+width: 50%;
+height: 100%;
+
+display: flex;
+align-items: center;
+justify-content: space-evenly;
+}
+.icons span {
+font-size: 30px;
+color: #22c55e;
+}
+.messageDropdown {
+position: absolute;
+width: 425px;
+height: auto;
+top: 55px;
+right: 100px;
+padding: 16px;
+border-radius: 0.25rem;
+background-color: rgb(255 255 255);
+border: 1px solid rgb(219, 216, 216);
+}
+.table {
+width: 100%;
+}
+.topTable {
+background-color: rgb(55 65 81);
+}
+.topTable th {
+color: rgb(156 163 175);
+}
+.notificationsDropdown{
+  position: absolute;
+  width: 292px;
+  height: 408px;
+  padding: 8px;
+  background-color: rgb(255 255 255 );
+  border: 1px solid rgb(219, 216, 216);
+  top: 55px;
+  border-radius: 0.25rem;
+  right: 10px;
+}
+.notificationTop{
+  border-bottom-width: 2px;
+  border-color: rgb(185 185 185 );
+  width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+}
+.textgray{
+  color: rgb(126 126 126 );
+}
+.textgreen{
+  color: rgb(34 197 94 );
+}
+.notificationTop span{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+}.notificationtextbox{
+  width: 100%;
+  height: 80%;
+}
+.notificationBottom{
+  border-top-width: 1px;
+  border-color: rgb(185 185 185 );
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hver:hover{
+  font-weight: 700;
+  transition: 0.1s ease-in;
+}
+.profileDropdown{
+  position: absolute;
+  right: 03px;
+  top: 55px;
+  width: auto;
+  height: auto;
+  border-radius: 0.25rem;
+  border: 1px solid rgb(219, 216, 216);
+  padding: 1rem;
+}
+.gapRow{
+  row-gap: 0.65rem;
+  width: 170px;
+  height: 100%;
+}
+.gapRow li{
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin-top: 5px;
+}
+.gapRow li div{
+  font-size: 18px;
+  width: 20%;
+}
+.gapRow li span{
+  width: 80%;
+}
+.gapRow li span:hover{
+  color: rgb(34 197 94 );
+}
+.maindivider{
+  display: flex;
+  width: 100%;
+  height: 93.7vh;
+}
+.sidenavSection{
+  background-color: #EDF2F3;
+  width: 18%;
+}
+.remainingsection{
+  width: 82%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+
+}
+.formcontainer{
+  width: 70%;
+  height: 80%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
+.formuppersection{
+  height: 20%;
+  border-radius: inherit  ;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.formlowersection form{
+  height: 100%;
+}
+.formlowersection form h1{
+  font-size: 35px;
+  font-weight: 700;
+}
+.formmiddlesection{
+  height: 8%;
+  display: flex;
+
+  align-items: start;
+  padding-left: 50px;
+}
+.formmiddlesection h2{
+  font-size: 28px;
+  font-weight: 600;
+}
+.formmidlowsection{
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.formmidlowsection select{
+  width: 70%;
+  height: 15%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  outline: 1px solid rgb(206, 205, 205);
+}
+.buttonholder{
+  width: 50%;
+  height: auto;
+  border-radius: 10px;
+}
+.formmbuttonsection{
+  height: 20%;
+
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+}
+.formmbuttonsection button{
+  width: 100%;
+  height: 40%;
+  border-radius: inherit;
+  /* color: rgb(34 197 94 ); */
+  background-color: rgb(34 197 94 );
+  font-weight: 600;
+  font-size: 24px;
+  color: #fff;
+}
+.selectorbutton{
+  width: 15%;
+  height: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* text-align: center; */
+}
+.selectorbutton button{
+  background-color:   rgb(34 197 94 );
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+
+}
+.formlowersection{
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+}
+.innersidenav{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.uppernav{
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: column;
+}
+.lowernav{
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.linemanager{
+  margin: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 7%;
+}
+.linemanager:hover{
+  transition: 0.2s ease-in;
+  background-color: rgb(200, 223, 208);
+  border-right-color:  rgb(34 197 94 );
+  border-right-width: 4px;
+}
+.linemanager h1 {
+ 
+  font-size: 1rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+}
+.cover{
+  width: 100%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logoutsection{
+  display: flex;
+  width: 45%;
+  height: 70%;
+  align-items: center;
+  justify-content: space-evenly;
+  color: rgb(159 156 156 );
+}
+.logoutsection h1 {
+  color: rgb(159 156 156 );
+  font-size: 1rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+}
+.cover:hover{
+  transition: 0.2s ease-in;
+  background-color: rgb(228, 187, 187);
+  border-right-color:  red;
+  border-right-width: 4px;
+}
+.thirdform{
+
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
+.divide{
+  height: 30%;
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.splitter{
+  display: flex;
+  flex-direction: column;
+}
+.splitter h2{
+  font-size: 20px;
+  font-weight: 600;
+}
+.splitter input{
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  outline: 1px solid rgb(206, 205, 205);
+  margin-top: ;
+  border-radius: 5px;
+  width: 98%;
+  height: 35px;
+  padding: 5px;
+}
+/* shared component css above */
+/* shared component css above */
+/* shared component css above */
+/* shared component css above */
+/* shared component css above */
