--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,12 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
+    --radius: 0.5rem;
+    --background-color: #22C55E;
+    --transparent-background-color: rgba(34, 197, 94, 0.09); /* Use rgba for transparency */
+    --title-color: #22C55E;
+    --primary-text-color: white;
+    --secondary-text-color: black;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -448,6 +453,29 @@ color: rgb(156 163 175);
   width: 98%;
   height: 35px;
   padding: 5px;
+}
+/* Using the variable and overriding Material UI AppBar color */
+.MuiAppBar-colorPrimary {
+  background-color: var(--transparent-background-color) !important;
+}
+.MuiSvgIcon-root {
+  color: var(--background-color);
+}
+.title-text{
+  font-family: Inter;
+  font-size: 26.75px;
+  font-weight: 600;
+  line-height: 32.37px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: var(--title-color);
+}
+.icon {
+  color: var(--title-color);
+}
+.head{
+  background-color: var(--background-color) !important;
 }
 /* shared component css above */
 /* shared component css above */
