--- a/client/src/index.css
+++ b/client/src/index.css
@@ -273,9 +273,73 @@ color: rgb(156 163 175);
 }
 .formcontainer{
   width: 70%;
-  height: 80%;
+  height: 70%;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
+.formNav{
+  /* border: 1px solid red; */
+  width: 70%;
+
+  height: 8%;
+}
+.fullpage{
+  width: 100%;
+  height: 100%;
+
+}
+.searchbar{
+  width: 55%;
+  /* border: 1px solid red; */
+  height: 100%;
+}
+.firstbutton{
+  width: 23%;
+  /* border: 1px solid green; */
+  height: 100%;
+  
+}
+.secondbutton{
+  width: 22%;
+  /* border: 1px solid blue; */
+  height: 100%;
+}
+.cflex{
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid blue; */
+}
+.rflex{
+  display: flex;
+  flex-direction: row;
+}
+.centering{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.restrictor{
+  width: 95%;
+  height: 100%;
+}
+.firstbutton .restrictor button{
+  width: 100%;
+  height: 60%;
+  border-radius: 10px;
+  background-color: rgb(34 197 94 );
+
+  font-size: 16px;
+  color: #fff;
+}
+.secondbutton .restrictor button{
+  width: 100%;
+  height: 60%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgb(34 197 94 ) ;
+
+  font-size: 16px;
+  color: #000;
 }
 .formuppersection{
   height: 20%;
@@ -314,6 +378,14 @@ color: rgb(156 163 175);
 .formmidlowsection select{
   width: 70%;
   height: 15%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  outline: 1px solid rgb(206, 205, 205);
+}
+.formmidlowsection input{
+  width: 70%;
+  height: 15%;
+  padding: 14px;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   outline: 1px solid rgb(206, 205, 205);
@@ -452,11 +524,74 @@ color: rgb(156 163 175);
 .splitter input{
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   outline: 1px solid rgb(206, 205, 205);
+  margin-top: ;
   border-radius: 5px;
   width: 98%;
   height: 35px;
   padding: 5px;
 }
+.splitter select{
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  outline: 1px solid rgb(206, 205, 205);
+  margin-top: ;
+  border-radius: 5px;
+  width: 98%;
+  height: 35px;
+  padding: 5px;
+}
+
+
+/* From Uiverse.io by xetrov47 */ 
+.search {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.search__input {
+  font-family: inherit;
+  font-size: inherit;
+  border: 1px solid #767676;
+  color: #767676;
+  padding: 5px 10px;
+  border-radius: 20px;
+  margin-right: -1.5rem;
+  height: 40px;
+  width: 27rem;
+}
+
+.search__input::-webkit-input-placeholder {
+  font-weight: 400;
+  color: #767676;
+  font-size: 14px;
+}
+
+.search__button {
+  border: none;
+  background-color: #fff;
+  margin-top: 0.1em;
+}
+
+.search__button:hover {
+  cursor: pointer;
+}
+
+.search input:focus {
+  outline: none;
+}
+.tablebody{
+  /* border: 1px solid red; */
+  width: 100%;
+  height: 80%;
+}
+.table{
+  /* border: 1px solid red; */
+  width: 95%;
+  height: 90%;
+}
+
+
+
 /* Using the variable and overriding Material UI AppBar color */
 .MuiAppBar-colorPrimary {
   background-color: var(--transparent-background-color) !important;
@@ -492,9 +627,6 @@ color: rgb(156 163 175);
   background-color: var(--button-primary) !important;
 }
 /* Default state */
-.MuiInputLabel-formControl {
-  color:var(--border-color) !important;
-}
 .MuiInputBase-formControl,
 .MuiOutlinedInput-root {
     border: none !important; /* Remove border completely */
@@ -502,7 +634,6 @@ color: rgb(156 163 175);
     border-radius: 4px !important;
     font-weight: 300 !important;
     transition: box-shadow 0.3s ease; /* Only transition box-shadow for smoothness */
-    border: 1px solid var(--border-color) !important;
 }
 
 /* Hover state */
@@ -648,3 +779,5 @@ small {
 /* shared component css above */
 /* shared component css above */
 /* shared component css above */
+
+
