--- a/client/src/index.css
+++ b/client/src/index.css
@@ -503,7 +503,7 @@ color: rgb(156 163 175);
   height: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 20px;
 }
 .divide{
